# code-kowinski-prize

./: README.md  parser.ipynb  pyproject.toml  serve_vllm.sh  test.ipynb
src/kowinski/: __init__.py
src/kowinski/agents/: __init__.py  code_agent.py
src/kowinski/parser/: file_parser.py  repo_parser.py
src/kowinski/scripts/: __init__.py  analyze_issue.py
src/kowinski/templates/: analysis-agent.yaml  code-template.yaml  patch-template.yaml
src/kowinski/tools/: code_analysis.py  patch_tools.py
